--- a/DeleteAtDefaultButton/DeleteAtDefaultButton/Base.lproj/Main.storyboard
+++ b/DeleteAtDefaultButton/DeleteAtDefaultButton/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="s4T-d5-b2N">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,7 +11,7 @@
         <!--Custom Table View ClassVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="CustomTableViewClass_ID" id="BYZ-38-t0r" customClass="CustomTableViewClassVC" customModule="Task24AUG2017Project" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CustomTableViewClass_ID" id="BYZ-38-t0r" customClass="CustomTableViewClassVC" customModule="DeleteAtDefaultButton" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="9xZ-pu-sO2"/>
                         <viewControllerLayoutGuide type="bottom" id="0dk-Kg-RGf"/>
@@ -20,29 +20,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sze-y3-PJ5">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sze-y3-PJ5">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CellForRowClass_ID" id="fFR-Ha-7Xv" customClass="CellForRowClass" customModule="Task24AUG2017Project" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CellForRowClass_ID" id="fFR-Ha-7Xv" customClass="CellForRowClass" customModule="DeleteAtDefaultButton" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fFR-Ha-7Xv" id="Zqr-LQ-py8">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eoH-bH-ESb">
-                                                    <rect key="frame" x="50" y="11" width="48" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eoH-bH-ESb">
+                                                    <rect key="frame" x="50" y="9.5" width="48" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKo-sd-gzy">
+                                                    <rect key="frame" x="298" y="4.5" width="56" height="35"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                    <state key="normal" title="Delete"/>
+                                                    <connections>
+                                                        <action selector="customDeleteBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jus-ZY-x5I"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="eoH-bH-ESb" firstAttribute="top" secondItem="Zqr-LQ-py8" secondAttribute="top" constant="11" id="8rL-as-DE0"/>
-                                                <constraint firstAttribute="bottom" secondItem="eoH-bH-ESb" secondAttribute="bottom" constant="11.5" id="DVy-am-Opy"/>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="eoH-bH-ESb" secondAttribute="trailing" constant="20" symbolic="YES" id="JI5-vw-b6l"/>
-                                                <constraint firstItem="eoH-bH-ESb" firstAttribute="leading" secondItem="Zqr-LQ-py8" secondAttribute="leading" constant="50" id="Z75-h2-T8S"/>
+                                                <constraint firstItem="eoH-bH-ESb" firstAttribute="leading" secondItem="Zqr-LQ-py8" secondAttribute="leading" constant="50" id="HkF-dc-8gZ"/>
+                                                <constraint firstItem="fKo-sd-gzy" firstAttribute="centerY" secondItem="Zqr-LQ-py8" secondAttribute="centerY" id="ItY-k4-uVv"/>
+                                                <constraint firstItem="fKo-sd-gzy" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="eoH-bH-ESb" secondAttribute="trailing" constant="8" symbolic="YES" id="OpJ-QM-cyY"/>
+                                                <constraint firstAttribute="trailing" secondItem="fKo-sd-gzy" secondAttribute="trailing" constant="21" id="blR-z0-tMR"/>
+                                                <constraint firstItem="eoH-bH-ESb" firstAttribute="centerY" secondItem="Zqr-LQ-py8" secondAttribute="centerY" id="bzB-Tp-Bai"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -60,12 +69,32 @@
                             <constraint firstItem="0dk-Kg-RGf" firstAttribute="top" secondItem="sze-y3-PJ5" secondAttribute="bottom" id="biB-FJ-dtc"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="FFj-6I-89o"/>
                     <connections>
                         <outlet property="customTableView" destination="sze-y3-PJ5" id="wxC-Ay-Pwg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="455.19999999999999" y="123.68815592203899"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="MGk-Xg-7A5">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="s4T-d5-b2N" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jcN-iX-CGo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Bdz-sT-e5t"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Vu-SC-ASd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-367" y="124"/>
         </scene>
     </scenes>
 </document>
